--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -73,32 +73,22 @@
         <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy.
           Możesz sprawdzić czym się zajmują.</p>
 
-        <ul class="help--slides-items">
-          <li>
-            <div class="col">
-              <div class="title">Fundacja "Dbam o Zdrowie"</div>
-              <div class="subtitle">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>
-            </div>
 
-            <div class="col">
-              <div class="title">Fundacja "A kogo"</div>
-              <div class="subtitle">Cel i misja: Pomoc wybudzaniu dzieci ze śpiączki.</div>
-            </div>
-          </li>
 
-          <li>
-            <div class="col">
-              <div class="title">Fundacja “Dla dzieci"</div>
-              <div class="subtitle">Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji życiowej.</div>
-            </div>
-            <div class="col">
-              <div class="title">Fundacja “Bez domu”</div>
-              <div class="subtitle">Cel i misja: Pomoc dla osób nie posiadających miejsca zamieszkania</div>
-            </div>
+          <ul class="help--slides-items" style="column-count: 2">
 
-          </li>
+            <li th:block th:each="institution, varStat : ${institutions}">
+<!--              <th:block th:each="institution, varStat : ${institutions}" th:class="${varStat.size == 2}">-->
+              <div class="col">
 
-        </ul>
+                <div class="title" th:text="${institution.name}"></div>
+                <div class="subtitle" th:text="${institution.description}"></div>
+
+              </div>
+
+            </li>
+<!--            </th:block>-->
+          </ul>
 
 
       </div>
