Institution list final

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
 
 <head th:include="fragments/header/head :: head(~{::title})">
-  <title>Document</title>
+  <title>Login</title>
 </head>
 
   <body>
