--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -73,12 +73,12 @@
         <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy.
           Możesz sprawdzić czym się zajmują.</p>
 
+        <ul class="help--slides-items">
 
+          <th:block th:each="institution, varStat : ${institutions}">
 
-          <ul class="help--slides-items" style="column-count: 2">
+            <li th:if="${varStat.even}">
 
-            <li th:block th:each="institution, varStat : ${institutions}">
-<!--              <th:block th:each="institution, varStat : ${institutions}" th:class="${varStat.size == 2}">-->
               <div class="col">
 
                 <div class="title" th:text="${institution.name}"></div>
@@ -86,18 +86,22 @@
 
               </div>
 
-            </li>
-<!--            </th:block>-->
-          </ul>
+              <div class="col" th:if="${varStat.index+1 < institutions.size()}">
 
+                <div class="title" th:text="${institutions.get(varStat.index+1).name}"></div>
+                <div class="subtitle" th:text="${institutions.get(varStat.index+1).description}"></div>
+
+              </div>
+
+            </li>
+          </th:block>
+        </ul>
 
       </div>
 
     </section>
 
-
     <div th:replace="fragments/footer :: footer"></div>
-
 
     <script src="js/app.js"></script>
 
