--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <section id="stats" class="stats">
       <div class="container container--85">
         <div class="stats--item">
-          <em>10</em>
+          <em th:text="${bagsSum}"></em>
           <h3>Oddanych worków</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum tempora!</p>
         </div>
@@ -103,7 +103,8 @@
 
     <div th:replace="fragments/footer :: footer"></div>
 
-    <script src="js/app.js"></script>
+<!--    <script type="text/javascript" th:src="@{/js/app.js}"></script>-->
+    <script type="text/javascript" src="js/app.js"></script>
 
   </body>
 </html>
