Donation Controller part1

--- a/src/main/resources/templates/fragments/header/nav-admin.html
+++ b/src/main/resources/templates/fragments/header/nav-admin.html
@@ -5,8 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<header th:fragment="adminHeader" class="header--form-page">
-    <nav class="container container--70">
+    <nav th:fragment="navAdmin" class="container container--70">
         <ul class="nav--actions">
             <li class="logged-user">
                 Witaj Agata
@@ -26,14 +25,6 @@
         <li><a href="index.html#contact" class="btn btn--without-border">Kontakt</a></li>
     </ul>
     </nav>
-
-    <div class="slogan container container--90">
-        <h2>
-            Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie
-            informacje o odbiorze.
-        </h2>
-    </div>
-</header>
 
 </body>
 </html>
