--- a/src/main/resources/templates/form-confirmation.html
+++ b/src/main/resources/templates/form-confirmation.html
@@ -6,13 +6,20 @@
 </head>
 
   <body>
-  <header th:insert="fragments/header/admin :: adminHeader">
+  <header class="header--form-page">
+    <nav th:insert="fragments/header/nav-admin :: navAdmin"></nav>
+
+    <div class="slogan container container--90">
+      <h2>
+        Dziękujemy za przesłanie formularza. Na maila prześlemy wszelkie
+        informacje o odbiorze.
+      </h2>
+    </div>
   </header>
 
+  <div th:insert="fragments/footer :: footer"></div>
 
-      <div th:replace="fragments/footer :: footer"></div>
+  <script src="js/app.js"></script>
 
-
-    <script src="js/app.js"></script>
   </body>
 </html>
