--- a/src/main/resources/templates/fragments/header/head.html
+++ b/src/main/resources/templates/fragments/header/head.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title th:replace="${title}">Charity</title>
-<!--    <link th:href="@{/css/style.css}" rel="stylesheet">-->
-    <link href="css/style.css" rel="stylesheet"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet">
+<!--    <link href="css/style.css" rel="stylesheet"/>-->
 
 </head>
 <body>
