--- a/src/main/resources/templates/form1.html
+++ b/src/main/resources/templates/form1.html
@@ -61,13 +61,13 @@
   <div class="form--steps-container">
     <div class="form--steps-counter">Krok <span>1</span>/4</div>
 <!--    id="newDonation"-->
-    <form  action="#" th:action="@{/donation/save}" th:object="${donation}" method="post">
+    <form  action="#" th:action="@{/donation/save}" th:object="${donation}" method="post" id="myform" name="myform">
       <!-- STEP 1: class .active is switching steps -->
       <div data-step="1" class="active">
         <h3>Zaznacz co chcesz oddać:</h3>
 
         <div th:each="category: ${categories}" class="form-group form-group--checkbox">
-          <label >
+          <label>
             <input type="checkbox" name="categories" th:value="${category.id}" th:field="*{categories}"/>
             <span class="checkbox"></span>
             <span class="description" th:text="${category.name}"></span>
@@ -86,7 +86,7 @@
         <div class="form-group form-group--inline">
           <label>
             Liczba 60l worków:
-            <input type="number" th:value="${donation.bagsQuantity}" th:field="*{bagsQuantity}" name="bags" step="1" min="1" />
+            <input type="number" th:value="${donation.bagsQuantity}" th:field="*{bagsQuantity}" id="bags" step="1" min="1" />
           </label>
         </div>
 
@@ -107,7 +107,7 @@
             <input type="radio" name="institution" th:value="${institution.id}" />
             <span class="checkbox radio"></span>
             <span class="description">
-                  <div class="title" th:text="${institution.name}"></div>
+                  <div class="title" th:text="${institution.shortName}"></div>
                   <div class="subtitle" th:text="${institution.description}"></div>
 
                 </span>
@@ -130,15 +130,18 @@
               <h4>Adres odbioru</h4>
 
               <div class="form-group form-group--inline">
-                <label> Ulica <input type="text" id="street" th:field="*{street}" name="address" /> </label>
+                <label> Ulica <input type="text" th:field="*{street}" name="address" required/> </label>
+                <span class="error" id="errorStreet"></span>
               </div>
 
               <div class="form-group form-group--inline">
-                <label> Miasto <input type="text" th:field="*{city}" name="city" /> </label>
+                <label> Miasto <input type="text" th:field="*{city}" name="city" required/> </label>
+                <span class="error" id="errorCity"></span>
               </div>
 
               <div class="form-group form-group--inline">
-                <label>Kod pocztowy <input type="text" th:field="*{zipCode}" name="postcode"/></label>
+                <label>Kod pocztowy <input type="text" th:field="*{zipCode}" name="postcode" required/></label>
+                <span class="error" id="errorZipcode"></span>
               </div>
 
               <div class="form-group form-group--inline">
@@ -166,7 +169,7 @@
 
           <div class="form-group form-group--buttons">
             <button type="button" class="btn prev-step">Wstecz</button>
-            <button onclick='updateForm()' type="submit" value="submit" class="btn next-step">Dalej</button>
+            <button type="button" value="submit" class="btn next-step">Dalej</button>
           </div>
 
       </div>
@@ -181,14 +184,12 @@
             <ul>
               <li>
                 <span class="icon icon-bag"></span>
-<!--                <span class="summary&#45;&#45;text">4 worki ubrań w dobrym stanie dla dzieci</span>-->
-                <span class="summary--text" th:text="${donation.bagsQuantity}"></span>
+                <span class="summary--text">4 worki ubrań w dobrym stanie dla dzieci</span>
               </li>
 
               <li>
                 <span class="icon icon-hand"></span>
-                <span class="summary--text"
-                >Dla fundacji "Mam marzenie" w Warszawie</span>
+                <span class="summary--text">Dla fundacji "Mam marzenie" w Warszawie</span>
               </li>
             </ul>
           </div>
@@ -197,19 +198,19 @@
             <div class="form-section--column">
               <h4>Adres odbioru:</h4>
               <ul>
-                <li th:text="${donation.street}"></li>
-                <li th:text="${donation.city}"></li>
-                <li th:text="${donation.zipCode}"></li>
-                <li>123 456 789</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
             </div>
 
             <div class="form-section--column">
               <h4>Termin odbioru:</h4>
               <ul>
-                <li>13/12/2018</li>
-                <li>15:40</li>
-                <li>Brak uwag</li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
             </div>
           </div>
