--- a/src/main/resources/templates/fragments/header/nav-admin.html
+++ b/src/main/resources/templates/fragments/header/nav-admin.html
@@ -8,7 +8,7 @@
     <nav th:fragment="navAdmin" class="container container--70">
         <ul class="nav--actions">
             <li class="logged-user">
-                Witaj Agata
+                Witaj
                 <ul class="dropdown">
                     <li><a href="#">Profil</a></li>
                     <li><a href="#">Moje zbiórki</a></li>
