--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,9 +12,9 @@
 
     <section class="login-page">
       <h2>Zaloguj się</h2>
-      <form>
+      <form action="#" th:action="@{/authenticateTheUser}" th:object="${userLogin}" method="post">
         <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
+          <input type="email" name="username" placeholder="Email" />
         </div>
         <div class="form-group">
           <input type="password" name="password" placeholder="Hasło" />
