--- a/src/main/resources/templates/fragments/header/nav-admin.html
+++ b/src/main/resources/templates/fragments/header/nav-admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,7 +8,7 @@
     <nav th:fragment="navAdmin" class="container container--70">
         <ul class="nav--actions">
             <li class="logged-user">
-                Witaj
+                Witaj <span sec:authentication="principal.name"></span>
                 <ul class="dropdown">
                     <li><a href="#">Profil</a></li>
                     <li><a href="#">Moje zbiórki</a></li>
