--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,11 +14,17 @@
       <h2>Zaloguj się</h2>
       <form action="#" th:action="@{/authenticateTheUser}" th:object="${userLogin}" method="post">
         <div class="form-group">
+
           <input type="email" name="username" placeholder="Email" />
+
         </div>
         <div class="form-group">
           <input type="password" name="password" placeholder="Hasło" />
           <a href="#" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>
+        </div>
+
+        <div class="alert alert-danger" th:if="${param.error != null}" style="margin-left: auto; margin-right: auto">
+          Niepoprawny email lub hasło. Spróbuj ponownie
         </div>
 
         <div class="form-group form-group--buttons">
