--- a/src/main/resources/templates/fragments/header/default.html
+++ b/src/main/resources/templates/fragments/header/default.html
@@ -7,10 +7,22 @@
 <body>
 <header th:fragment="defaultHeader" class="header--main-page">
     <nav class="container container--70">
-        <ul class="nav--actions">
+        <ul class="nav--actions" sec:authorize="isAnonymous()">
             <li><a href="login" class="btn btn--small btn--without-border">Zaloguj</a></li>
             <li><a href="register" class="btn btn--small btn--highlighted">Załóż konto</a></li>
         </ul>
+
+        <ul class="nav--actions" sec:authorize="hasRole('ROLE_USER')">
+            <li class="logged-user">
+                Witaj <span sec:authentication="name"></span>
+                <ul class="dropdown">
+                    <li><a href="#">Profil</a></li>
+                    <li><a href="#">Moje zbiórki</a></li>
+                    <li><a href="#">Wyloguj</a></li>
+                </ul>
+            </li>
+        </ul>
+
 
         <ul>
             <li><a href="" class="btn btn--without-border active">Start</a></li>
